# VTP_source_code

./: .travis.yml  CMakeLists.txt  main.cpp
include/: geodesic_algorithm_base.h  geodesic_algorithm_exact.h  geodesic_algorithm_exact_elements.h  geodesic_constants_and_simple_functions.h  geodesic_memory.h  geodesic_mesh.h  geodesic_mesh_elements.h  stdafx.h
test/: CMakeLists.txt
